--- a/templates/Trick/view.html.twig
+++ b/templates/Trick/view.html.twig
@@ -81,28 +81,8 @@
                                         <div class="carousel-inner enlarge">
                                             {% for video in trick.videos %}
                                                 <div class="carousel-item {% if loop.index0 == 0 %} active {% endif %}">
-                                                    <iframe id="video-reader" frameborder='0' allowfullscreen="1" src="{{ video.url }}" width="auto" height="250" value="0"></iframe>
+                                                    <iframe id="video-reader" frameborder='0' allowfullscreen="1" src="{{ video.url|formatUrl }}" width="auto" height="250" value="0"></iframe>
                                                 </div>
-                                                <script>
-                                                        var url = "{{ video.url }}";
-                                                        var iframe = document.getElementById("video-reader");
-                                                            if (url.includes('youtube') || url.includes('youtu.be')) 
-                                                            {
-                                                                var youtubeId = url.substring(url.length -11)
-                                                                var youtubeLink = "https://www.youtube.com/embed/" + youtubeId;
-                                                                iframe.src = youtubeLink;
-                                                                //console.log(youtubeLink);
-                                                            }
-                                                            else if (url.includes('dailymotion')) {
-                                                                var dailyId = url.substring(url.length -7)
-                                                                var dailyLink = "https://www.dailymotion.com/embed/video/" + dailyId; 
-                                                                iframe.src = dailyLink;
-                                                                //console.log(dailyLink);
-                                                            }
-                                                            else {
-                                                                alert('Le format de l\'URL n\'est pas valide');
-                                                            }
-                                                </script>
                                             {% endfor %}
                                         </div>
                                         <a class="carousel-control-prev" href="#carousel-v" data-slide="prev">
